[gd_scene load_steps=4 format=3 uid="uid://4gjb1b7nhkh2"]

[ext_resource type="Script" uid="uid://cr7vbp0604l6v" path="res://scripts/settings_panels/dir_section_controller.gd" id="1_i1172"]
[ext_resource type="Texture2D" uid="uid://buvtdh0slsxgf" path="res://graphics/app_icons/mag_glass.svg" id="2_sw3il"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_if5qn"]
color = Color(1, 1, 1, 1)

[node name="DirSectionVBC" type="VBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 146.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_i1172")

[node name="DirHeaderLB" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "STTS_DIR_HEADER_LB"

[node name="HeaderBodyHS" type="HSeparator" parent="."]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_if5qn")

[node name="WpsDirVBC" type="HBoxContainer" parent="."]
layout_mode = 2
tooltip_text = "lkjasdflkjasdflkjsadflkjsdf"

[node name="WpsDirLB" type="Label" parent="WpsDirVBC"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
text = "STTS_WPS_DIR_LB"
autowrap_mode = 3

[node name="WpsDirLE" type="LineEdit" parent="WpsDirVBC"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SearchWpsDirBTN" type="Button" parent="WpsDirVBC"]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
icon = ExtResource("2_sw3il")
icon_alignment = 1

[node name="ThumbsDirVBC" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ThumbsDirLB" type="Label" parent="ThumbsDirVBC"]
layout_mode = 2
size_flags_horizontal = 3
text = "STTS_THUMBS_DIR_LB"

[node name="ThumbsDirLE" type="LineEdit" parent="ThumbsDirVBC"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SearchThumbsDirBTN" type="Button" parent="ThumbsDirVBC"]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
icon = ExtResource("2_sw3il")
icon_alignment = 1

[node name="EnablePrvwProcessingCB" type="CheckBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "STTS_PROCESS_PRVW_CB"

[node name="PrvwDirVBC" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="PrvwDirLB" type="Label" parent="PrvwDirVBC"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
text = "STTS_PRVW_DIR_LB"
autowrap_mode = 3

[node name="PrvwDirLE" type="LineEdit" parent="PrvwDirVBC"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SearchPrvwDirBTN" type="Button" parent="PrvwDirVBC"]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
icon = ExtResource("2_sw3il")
icon_alignment = 1

[node name="SearchDirFD" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 1
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
